# FakeLib

./: .travis.yml  CallBacks.cpp  FakeLib.cpp  FakeLibImplementation.cpp  README.md  meson.build
include/: CallBacks.h  FakeLib.h  FakeLibImplementation.h  FakeLibUtils.hpp
include/FakeLib/: common.h
pkg-config/: fake.pc
